# Divitage

./: .gitignore  README.md
.github/workflows/: build-test-linux-mac.yml
divitage/: App.config  Divitage.Maui.sln  MainWindow.xaml  MainWindow.xaml.cs  UI_Dictionary.xaml  confirmDialog.xaml  confirmDialog.xaml.cs  converterMain.xaml  converterMain.xaml.cs  divitage.csproj  howToUse.xaml  howToUse.xaml.cs  packages.config  setting.xaml  setting.xaml.cs
divitage/Divitage.Maui/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  Divitage.Maui.csproj  MauiProgram.cs  ThirdPartyNotices.txt
divitage/Divitage.Maui/Helpers/: ServiceHelper.cs
divitage/Divitage.Maui/Models/: SplitSettings.cs
divitage/Divitage.Maui/Pages/: AboutPage.xaml  AboutPage.xaml.cs  HomePage.xaml  HomePage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs  SplitConfirmPage.xaml  SplitConfirmPage.xaml.cs
divitage/Divitage.Maui/Resources/Styles/: Colors.xaml  Styles.xaml
divitage/Divitage.Maui/Services/: AppPreferences.cs  VideoSplitService.cs
divitage/Properties/: Resources.Designer.cs  Resources.resx  Settings.Designer.cs  Settings.settings
docs/: design.md  requirements.md
linux/DivitageLinuxApp/: CMakeLists.txt  README.md
linux/DivitageLinuxApp/include/: AppState.h  ConversionWorker.h  ConverterPanel.h  DropArea.h  HowToPanel.h  MainWindow.h  SettingsPanel.h
linux/DivitageLinuxApp/src/: AppState.cpp  ConversionWorker.cpp  ConverterPanel.cpp  DropArea.cpp  HowToPanel.cpp  MainWindow.cpp  SettingsPanel.cpp  main.cpp
linux/DivitageLinuxApp/tests/: CMakeLists.txt  test_appstate.cpp  test_filepath.cpp
mac/DivitageMacApp/: Package.swift  README.md
mac/DivitageMacApp/Sources/DivitageMacApp/: AppCommands.swift  AppState.swift  ContentView.swift  ConverterPanelView.swift  DivitageMacApp.swift  HowToUseView.swift  SettingsView.swift
mac/DivitageMacApp/Tests/DivitageMacAppTests/: AppStateTests.swift  ConversionTaskTests.swift  WorkspacePanelTests.swift
win/: divitage.sln
win/DivitageWinUI/: DivitageWinUI.sln  README.md
win/DivitageWinUI/DivitageWinUI/: App.xaml  App.xaml.cs  DivitageWinUI.csproj  MainWindow.xaml  MainWindow.xaml.cs
win/DivitageWinUI/DivitageWinUI.Tests/: DivitageWinUI.Tests.csproj
win/DivitageWinUI/DivitageWinUI.Tests/Helpers/: SettingsHelperTests.cs
win/DivitageWinUI/DivitageWinUI.Tests/Services/: FileConverterServiceTests.cs
win/DivitageWinUI/DivitageWinUI/Helpers/: SettingsHelper.cs  WindowHelper.cs
win/DivitageWinUI/DivitageWinUI/Models/: ConversionHistoryItem.cs  ConversionOptions.cs  ConversionProfile.cs
win/DivitageWinUI/DivitageWinUI/Services/: FFmpegConverterService.cs  FileConverterService.cs  HistoryService.cs  ProfileService.cs
win/DivitageWinUI/DivitageWinUI/Views/: ConverterPage.xaml  ConverterPage.xaml.cs  HowToPage.xaml  HowToPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs
win/divitage/: App.xaml  App.xaml.cs  MainWindow.xaml.cs  UI_Dictionary.xaml  divitage.csproj  howToUse.xaml.cs  packages.config  setting.xaml
win/divitage/Properties/: AssemblyInfo.cs  Resources.resx
